fixed the scrolling background error when on mobile screens

--- a/contactform.css
+++ b/contactform.css
@@ -11,9 +11,6 @@
   font-family: 'Poppins', sans-serif;
 }
 
-
-
-
 #header{
     position: absolute;
     top: 0;
@@ -65,14 +62,6 @@
     background: #fff;
     color: #111;
 }
-
-
-
-
-
-
-
-
 
 
 body{
@@ -265,8 +254,8 @@ font-family: 'neon', sans-serif;
 
 
 @media (max-width: 700px) {
-    html{
-        overflow-y: hidden;
+    body{
+        background-attachment: fixed;
     }
 
   .container .text{
